<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="Username"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginForgotPwBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginStatus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="#8e7cc3"
        android:text="Forgot Password" />

    <Button
        android:id="@+id/loginLoginBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginForgotPwBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="#8e7cc3"
        android:text="Login" />

    <Button
        android:id="@+id/loginToRegisterBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginLoginBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="#8e7cc3"
        android:onClick="toRegister"
        android:text="Register" />

    <TextView
        android:id="@+id/loginStatus"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />


</RelativeLayout>