<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/regLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp"
        android:textSize="50sp"
        android:text="Registration"
        />


    <EditText
        android:id="@+id/regUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:ems="10"
        android:hint="Username"
        android:minHeight="48dp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/regEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="219dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="286dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/regConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="292dp"
        android:ems="10"
        android:hint="ConfirmPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="170dp"
        android:text="Register" />

    <TextView
        android:id="@+id/regError"
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="-40dp" />


</RelativeLayout>